OnGCP/03.kiali.secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:    
    name: istio-system
